--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -31,6 +33,7 @@
     "react-icons": "^5.2.1",
     "react-international-phone": "^4.3.0",
     "react-resizable-panels": "^2.0.19",
+    "react-scroll": "^1.9.0",
     "react-stars": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -40,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-stars": "^2.2.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
